support aliyun supabase

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deploy": "npm run build && wrangler pages deploy",
     "build": "remix vite:build",
     "dev": "node pre-start.cjs  && remix vite:dev",
+    "dev:node": "remix dev",
     "test": "vitest --run",
     "test:watch": "vitest",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint app",
@@ -51,6 +52,11 @@
     "@ai-sdk/google": "0.0.52",
     "@ai-sdk/mistral": "0.0.43",
     "@ai-sdk/openai": "1.1.2",
+    "@alicloud/credentials": "^2.4.4",
+    "@alicloud/gpdb20160503": "2.7.0",
+    "@alicloud/openapi-client": "^0.4.15",
+    "@alicloud/tea-typescript": "^1.8.0",
+    "@alicloud/tea-util": "^1.4.10",
     "@codemirror/autocomplete": "^6.18.3",
     "@codemirror/commands": "^6.7.1",
     "@codemirror/lang-cpp": "^6.0.2",
