--- a/.env.example
+++ b/.env.example
@@ -45,6 +45,9 @@ TOGETHER_API_BASE_URL=
 # You only need this environment variable set if you want to use DeepSeek models through their API
 DEEPSEEK_API_KEY=
 
+# You only need this environment variable set if you want to use Tongyi models through their API
+TONGYI_API_KEY=
+
 # Get your OpenAI Like API Key
 OPENAI_LIKE_API_KEY=
 
@@ -55,7 +58,7 @@ TOGETHER_API_KEY=
 #Get your Hyperbolics API Key at https://app.hyperbolic.xyz/settings
 #baseURL="https://api.hyperbolic.xyz/v1/chat/completions"
 HYPERBOLIC_API_KEY=
-HYPERBOLIC_API_BASE_URL= 
+HYPERBOLIC_API_BASE_URL=
 
 # Get your Mistral API Key by following these instructions -
 # https://console.mistral.ai/api-keys/
@@ -78,7 +81,7 @@ LMSTUDIO_API_BASE_URL=
 # You only need this environment variable set if you want to use xAI models
 XAI_API_KEY=
 
-# Get your Perplexity API Key here - 
+# Get your Perplexity API Key here -
 # https://www.perplexity.ai/settings/api
 # You only need this environment variable set if you want to use Perplexity models
 PERPLEXITY_API_KEY=
@@ -114,9 +117,11 @@ VITE_GITHUB_ACCESS_TOKEN=
 VITE_GITHUB_TOKEN_TYPE=classic
 
 # Example Context Values for qwen2.5-coder:32b
-# 
+#
 # DEFAULT_NUM_CTX=32768 # Consumes 36GB of VRAM
 # DEFAULT_NUM_CTX=24576 # Consumes 32GB of VRAM
 # DEFAULT_NUM_CTX=12288 # Consumes 26GB of VRAM
 # DEFAULT_NUM_CTX=6144 # Consumes 24GB of VRAM
 DEFAULT_NUM_CTX=
+
+ALIBABA_CLOUD_REGION_ID=cn-beijing
