add two env in .env.example

--- a/.env.example
+++ b/.env.example
@@ -106,7 +106,7 @@ VITE_LOG_LEVEL=debug
 # 1. Importing/cloning GitHub repositories without rate limiting
 # 2. Accessing private repositories
 # 3. Automatic GitHub authentication (no need to manually connect in the UI)
-# 
+#
 # For classic tokens, ensure it has these scopes: repo, read:org, read:user
 # For fine-grained tokens, ensure it has Repository and Organization access
 VITE_GITHUB_ACCESS_TOKEN=
@@ -125,3 +125,7 @@ VITE_GITHUB_TOKEN_TYPE=classic
 DEFAULT_NUM_CTX=
 
 ALIBABA_CLOUD_REGION_ID=cn-beijing
+
+# Alibaba cloud ak/sk for access adb supabase managment api.
+ALIBABA_CLOUD_ACCESS_KEY_ID=
+ALIBABA_CLOUD_ACCESS_KEY_SECRET=
